--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^2.0.4",
+    "@ngrx/router-store": "^1.2.6",
+    "@ngrx/store": "^2.2.3",
+    "@ngrx/store-devtools": "^3.2.4",
     "core-js": "^2.4.1",
     "date-fns": "^1.29.0",
     "rxjs": "^5.5.6",
