--- a/package.json
+++ b/package.json
@@ -1,55 +1,72 @@
 {
-  "name": "app2",
-  "version": "0.0.0",
+  "name": "taskmgr",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
+    "server": "json-server --watch mock/data.json --port 3002",
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build --prod",
+    "start": "concurrently \"ng serve --port=8000\" \"npm run server\"",
+    "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
+    "typedoc": "typedoc"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.11",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
+    "@angular/animations": "^4.0.2",
+    "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
     "@angular/material": "^2.0.0-beta.7",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^2.0.4",
     "@ngrx/router-store": "^1.2.6",
     "@ngrx/store": "^2.2.3",
     "@ngrx/store-devtools": "^3.2.4",
+    "angular-calendar": "^0.17.0",
     "core-js": "^2.4.1",
-    "date-fns": "^1.29.0",
-    "rxjs": "^5.5.6",
-    "zone.js": "^0.8.19"
+    "crypto-js": "^3.1.9-1",
+    "hammerjs": "^2.0.8",
+    "lodash": "^4.17.4",
+    "reselect": "^3.0.0",
+    "rxjs": "^5.1.0",
+    "web-animations-js": "^2.2.5",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "~1.7.3",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
-    "@types/jasminewd2": "~2.0.2",
+    "@angular/cli": "^1.1.3",
+    "@angular/compiler-cli": "^4.0.0",
+    "@angular/language-service": "^4.0.0",
+    "@types/crypto-js": "^3.1.33",
+    "@types/jasmine": "2.5.45",
+    "@types/lodash": "^4.14.65",
     "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "~2.8.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "codelyzer": "~3.0.1",
+    "concurrently": "^3.5.0",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ngrx-store-freeze": "^0.1.9",
     "protractor": "~5.1.2",
-    "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
-  }
+    "ts-node": "~3.0.4",
+    "tslint": "~5.3.2",
+    "typescript": "~2.3.3"
+  },
+  "description": "The Task Manager System",
+  "main": "index.js",
+  "repository": "https://github.com/wpcfan/taskmgr.git",
+  "author": "wpcfan <peng.wang@outlook.com>"
 }
