--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.1",
   "license": "MIT",
   "scripts": {
-    "server": "json-server --watch mock/data.json --port 3002",
+    "server": "json-server --watch ./mock/data.json",
     "ng": "ng",
-    "start": "concurrently \"ng serve --port=8000\" \"npm run server\"",
+    "start": "concurrently \"ng serve --o --port=8000 \" \"npm run server\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -32,6 +32,7 @@
     "@ngrx/store": "^2.2.3",
     "@ngrx/store-devtools": "^3.2.4",
     "angular-calendar": "^0.17.0",
+    "concurrently": "^3.6.0",
     "core-js": "^2.4.1",
     "crypto-js": "^3.1.9-1",
     "hammerjs": "^2.0.8",
